# napari-cellstream

./: .gitignore  MANIFEST.in  README.md  example_viewer.py  pyproject.toml  setup.cfg
napari_cellstream/: __init__.py  _cwt_widget.py  _downsample_widget.py  _falsecolor_spectrum.py  _fft_widget.py  _plugin.py  napari.yaml  spectral_analyzer.py
