[project]
name = "napari_cellstream"
version = "0.1.0"
description = "Napari spectral analyzer for pixel-level cellstream diagnostics"
authors = [
    { name = "coylelab" }
]
dependencies = [
    "napari",
    "magicgui",
    "numpy",
    "matplotlib",
    "ssqueezepy",
    "npe2"
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
